--- a/src/App.css
+++ b/src/App.css
@@ -201,6 +201,7 @@ form .input-block {
   font-size: 1.1em;
   margin: 0 4vw;
   font-weight: bold;
+  align-self: center;
 }
 
 .result-title img {
