--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@
 
   body{
     background: linear-gradient(180deg, #2c3035 0%, #2D3540 100%);
-    height: 100vh
+    height: 100vh;
   }
 
   .Logo {
@@ -177,7 +177,8 @@ form .input-block {
 
 .result {
   display: flex;
-  padding: 2vh 10vw;
+  padding: 10px;
+  max-width: 85vw;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -201,7 +202,6 @@ form .input-block {
   font-size: 1.1em;
   margin: 0 4vw;
   font-weight: bold;
-  align-self: center;
 }
 
 .result-title img {
@@ -234,9 +234,9 @@ form .input-block {
 
 .result-prevision {
   display: flex;
-  /* padding: 2vh 10vw; */
+  padding: 2vh 10vw;
   padding: 10px;
-  width: 85vw;
+  max-width: 90vw;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -259,6 +259,7 @@ form .input-block {
   display: inline-block;
   background: #22262B;
   width: 80vw;
+  border-radius: 2em !important;
   margin-top: 0.5em;
 }
 
@@ -267,7 +268,6 @@ form .input-block {
 }
 
 .forecast-days .option {
-  /* background: #fff; */
   height: 5vh;
   width: 15vw;
   display: flex;
@@ -275,8 +275,8 @@ form .input-block {
   align-items: center;
   padding: 0 10px;
   text-align: center;
-  border-radius: 5px;
   transition: all 0.3s ease;
+  justify-content: center;
 }
 
  .forecast input[type="radio"] {
@@ -290,13 +290,13 @@ form .input-block {
  }
 
  .forecast #day-one:checked:checked ~ .day-one {
-  border-top-left-radius: 15px;
-  border-bottom-left-radius: 15px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
  }
 
  .forecast #day-five:checked:checked ~ .day-five {
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
  }
 
  .forecast #day-one:checked:checked ~ .day-one,
